Fix broken input-groups css when using Chrome

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -560,7 +560,7 @@ form {
       }
     }
     .input-group {
-      width: fit-content;
+      width: min-content;
     }
   }
 }
